<resources>
    <string name="app_name">Media</string>
    <string name="media_examples">Media examples</string>
    <string name="select_capture_picture">Select/Capture Picture</string>
    <string name="select_capture_video">Select/Capture Video</string>
    <string name="screenshot_view">Screenshot view</string>
    <string name="capture_fruits">Capture fruits</string>
    <string name="capture_apple">Capture apple</string>
    <string name="capture_everything">Capture everything</string>
    <string name="view_captured_successfully">Screenshot taken successfully</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="record_a_video">Record a video</string>
    <string name="picture_error">Could not retrieve picture, try again</string>
    <string name="video_error">Could not retrieve video, try again</string>
    <string name="screenshot_error">Could not take the screenshot, try again</string>
    <string name="close">Close</string>
</resources>