<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".screenshot.ScreenshotActivity">

    <ImageView
        android:id="@+id/apple"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:importantForAccessibility="2"
        android:src="@drawable/apple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/fruits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:importantForAccessibility="2"
            android:src="@drawable/orange" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:importantForAccessibility="2"
            android:src="@drawable/lemon" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:importantForAccessibility="2"
            android:src="@drawable/kiwi" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/capture_apple"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/capture_fruits"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_fruits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capture_apple"
        app:strokeColor="?attr/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/capture_everything"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_everything"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capture_fruits"
        app:strokeColor="?attr/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>